--- a/labeled_data/technology/database/document.yml
+++ b/labeled_data/technology/database/document.yml
@@ -72,6 +72,12 @@ data:
           name: apache/couchdb
         - id: 5683653
           name: apache/drill
+        - id: 341631350
+          name: apache/lucene
+        - id: 50229487
+          name: apache/lucene-solr
+        - id: 114187903
+          name: apple/foundationdb
         - id: 137869753
           name: appy-one/acebase
         - id: 2649214
@@ -98,10 +104,14 @@ data:
           name: capjamesg/jamesql
         - id: 639434928
           name: cfu288/SylvieJS
+        - id: 546206616
+          name: chroma-core/chroma
         - id: 13353426
           name: cinchapi/concourse
         - id: 66783145
           name: couchbase/couchbase-lite-core
+        - id: 9342529
+          name: crate/crate
         - id: 722117815
           name: cursusdb/cursusdb
         - id: 249981301
@@ -160,6 +170,10 @@ data:
           name: kagisearch/vectordb
         - id: 1776883
           name: kimchy/compass
+        - id: 607441698
+          name: lancedb/lancedb
+        - id: 349172057
+          name: linkedin/venice
         - id: 376679845
           name: losfair/RefineDB
         - id: 9795883
@@ -206,6 +220,8 @@ data:
           name: polypheny/Polypheny-DB
         - id: 714074
           name: pouchdb/pouchdb
+        - id: 5349565
+          name: prestodb/presto
         - id: 10153163
           name: priitj/whitedb
         - id: 75425073
@@ -220,6 +236,8 @@ data:
           name: radare/sdb
         - id: 129436009
           name: rakibtg/SleekDB
+        - id: 542714
+          name: ravendb/ravendb
         - id: 1917262
           name: realm/realm-core
         - id: 223462217
@@ -242,8 +260,12 @@ data:
           name: small-tech/jsdb
         - id: 192631273
           name: sourcenetwork/defradb
+        - id: 436658287
+          name: surrealdb/surrealdb
         - id: 22761491
           name: symisc/unqlite
+        - id: 911980
+          name: tarantool/tarantool
         - id: 3920536
           name: teamdev/densodb
         - id: 11654790
@@ -268,11 +290,15 @@ data:
           name: vearch/vearch
         - id: 634656527
           name: vector5ai/vector5db
+        - id: 60377070
+          name: vespa-engine/vespa
         - id: 735981
           name: xapian/xapian
         - id: 125824259
           name: xtdb/xtdb
         - id: 456549280
           name: ydb-platform/ydb
+        - id: 574588439
+          name: ytsaurus/ytsaurus
         - id: 47479424
           name: zerodb/zerodb
