--- a/labeled_data/technology/database/graph.yml
+++ b/labeled_data/technology/database/graph.yml
@@ -17,6 +17,10 @@ data:
           name: DevrexLabs/OrigoDB
         - id: 893031915
           name: HelixDB/helix-db
+        - id: 77385607
+          name: JanusGraph/janusgraph
+        - id: 1071734040
+          name: LadybugDB/ladybug
         - id: 92834468
           name: Pometry/Raphtory
         - id: 45098765
@@ -77,8 +81,12 @@ data:
           name: memgraph/memgraph
         - id: 81411018
           name: microsoft/GraphEngine
+        - id: 6650539
+          name: neo4j/neo4j
         - id: 7083240
           name: orientechnologies/orientdb
+        - id: 1075506724
+          name: orneryd/Mimir
         - id: 26917250
           name: pkumod/gStore
         - id: 166387176
@@ -95,6 +103,8 @@ data:
           name: stellardb/StellarDB
         - id: 238509
           name: stevedekorte/vertexdb
+        - id: 436658287
+          name: surrealdb/surrealdb
         - id: 198466472
           name: terminusdb/terminusdb
         - id: 3548254
