--- a/labeled_data/technology/database/object_oriented.yml
+++ b/labeled_data/technology/database/object_oriented.yml
@@ -14,6 +14,8 @@ data:
           name: Alachisoft/TayzGrid
         - id: 681142
           name: Bobris/BTDB
+        - id: 52080367
+          name: CUBRID/cubrid
         - id: 329729926
           name: CondensationDB/Condensation-java
         - id: 8799170
@@ -76,6 +78,8 @@ data:
           name: mateusfreira/nun-db
         - id: 273564373
           name: morecraf/Siaqodb
+        - id: 351806852
+          name: neondatabase/neon
         - id: 79901405
           name: objectbox/objectbox-java
         - id: 7083240
