--- a/labeled_data/technology/database/search_engine.yml
+++ b/labeled_data/technology/database/search_engine.yml
@@ -9,6 +9,8 @@ data:
     - name: GitHub
       type: Code Hosting
       repos:
+        - id: 50229487
+          name: apache/lucene-solr
         - id: 507775
           name: elastic/elasticsearch
         - id: 95614931
@@ -17,9 +19,13 @@ data:
           name: marqo-ai/marqo
         - id: 130688011
           name: meilisearch/meilisearch
+        - id: 334274271
+          name: opensearch-project/OpenSearch
         - id: 36992044
           name: sphinxsearch/sphinx
         - id: 79317191
           name: typesense/typesense
+        - id: 60377070
+          name: vespa-engine/vespa
         - id: 735981
           name: xapian/xapian
